Another jumbo change. Fixed swagger so the correct flags are passed in for generation. Some schema changes, like having patient id in the path. Removing blank evaluation generator. Renamed the 'Question' class. Added mappers so date times go out in string timestamp format (weirdness trying to deserialize on the Java side).
