# src/main/java/org/flinnfoundation/model/evaluation/Question.java
@@ -1,19 +1,0 @@
-package org.flinnfoundation.model.evaluation;
-
-import lombok.Data;
-
-import javax.persistence.*;
-
-@Data
-@Entity
-public class Question {
-
-    @Id
-    @GeneratedValue
-    private long id;
-
-    private String prompt;
-
-    @Lob
-    private String response;
-}
